@@ -2,6 +2,7 @@ Please view this file on the master branch, on stable branches it's out of date.
 
 v 8.4.0 (unreleased)
   - Implement new UI for group page
+  - Implement search inside emoji picker
 
 v 8.3.0
   - Add CAS support (tduehr)
